# SDA

Labs/Lab1_SortedBag/: CMakeLists.txt  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Labs/Lab2_MultiMap20/: App.cpp  CMakeLists.txt  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp  pseudocod.txt
Labs/Lab3_Matrix1/: CMakeLists.txt  Matrix.cpp  Matrix.h
Seminaries/Sem1/: bag.py  iterator.py  test.py
